--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     // Redirect to Google Play Store or Apple App Store if the app is not installed
     const userAgent = navigator.userAgent || navigator.vendor || window.opera;
     if (/android/i.test(userAgent)) {
-      window.location.replace("https://play.google.com/store/apps/details?id=com.facelift.constructions");
+      window.location.replace("https://play.google.com/store/apps/details?id=com.app.vibestar");
     } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
       window.location.replace("https://apps.apple.com/us/app/facelift-constructions/id1617517962");
     }
