--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
 
     // Redirect to Google Play Store or Apple App Store if the app is not installed
     const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-    if (/android/i.test(userAgent)) {
-      window.location.replace("https://play.google.com/store/apps/details?id=com.app.vibestar");
-    } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-      window.location.replace("https://apps.apple.com/in/app/vibestar/id6670305854");
-    }
+     if (/android/i.test(userAgent)) {
+    window.location.replace("https://play.google.com/store/apps/details?id=com.app.vibestar");
+  } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+    window.location.replace("https://apps.apple.com/in/app/vibestar/id6670305854");
+  } else {
+    // New case: Redirect all other devices (e.g., Windows, macOS) to your website
+    window.location.replace("https://www.myvibestar.com");
+  }
   </script>
 </body>
 </html>
