--- a/index.html
+++ b/index.html
@@ -28,8 +28,21 @@
 </head>
 <body>
   <script>
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+  
+    if (/android/i.test(userAgent)) {
+      // Redirect Android users to Play Store
+      window.location.replace("https://play.google.com/store/apps/details?id=com.app.vibestar");
+    } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+      // Redirect iOS users to App Store
+      window.location.replace("https://apps.apple.com/in/app/vibestar/id6670305854");
+    } else {
+      // Redirect all other platforms (desktop, unsupported OS) to main website
+      window.location.replace("https://www.myvibestar.com");
+    }
+  
+    // If none of the redirects happen quickly (e.g., user blocks JS redirects), fallback to Flutter app
     window.addEventListener('load', function(ev) {
-      // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
@@ -41,17 +54,6 @@
         }
       });
     });
-
-    // Redirect to Google Play Store or Apple App Store if the app is not installed
-    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-     if (/android/i.test(userAgent)) {
-    window.location.replace("https://play.google.com/store/apps/details?id=com.app.vibestar");
-  } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-    window.location.replace("https://apps.apple.com/in/app/vibestar/id6670305854");
-  } else {
-    // New case: Redirect all other devices (e.g., Windows, macOS) to your website
-    window.location.replace("https://www.myvibestar.com");
-  }
   </script>
 </body>
 </html>
